--- a/core/templates/core/game_list.html
+++ b/core/templates/core/game_list.html
@@ -7,6 +7,12 @@
 
 <h1>Game list</h1>
 <a href="{% url 'game-publish' %}">Add Game</a>
+
+<form method="GET">
+    <input type="text" name="search-area" value="{{search_input}}">
+    <input type="submit" value="Search">
+</form>
+
 <table>
     <tr>
         <th>Game</th>
