--- a/core/templates/core/game.html
+++ b/core/templates/core/game.html
@@ -1,1 +1,5 @@
+{% extends 'core/base.html' %}
+{%block title%} {{game.name}} {%endblock%}
+{%block content%}
 <h1>Game: {{game.name}}</h1>
+{%endblock%}
