--- a/core/templates/core/game_list.html
+++ b/core/templates/core/game_list.html
@@ -1,30 +1,20 @@
-{% if request.user.is_authenticated %}
-<p>{{request.user}}</p>
-<a href="{% url 'logout' %}">Logout</a>
-{% else %}
-<a href="{% url 'login' %}">Login</a>
-{% endif %}
+{% extends 'core/base.html' %}
+{% block title %} All games {% endblock %}
 
-<h1>Game list</h1>
-<a href="{% url 'game-publish' %}">Add Game</a>
-
-<form method="GET">
-    <input type="text" name="search-area" value="{{search_input}}">
-    <input type="submit" value="Search">
-</form>
-
-<table>
-    <tr>
-        <th>Game</th>
-    </tr>
-    {% for game in games %}
-    <tr>
-        <td>{{game.name}}</td>
-        <td><a href="{% url 'game' game.id %}">View</a></td>
-        <td><a href="{% url 'game-update' game.id %}">Edit</a></td>
-        <td><a href="{% url 'game-delete' game.id %}">Delete</a></td>
-    </tr>
-    {% empty %}
-        <h3>No games in list</h3>
-    {% endfor %}
-</table>
+{%block content%}
+    <table>
+        <tr>
+            <th>Game</th>
+        </tr>
+        {% for game in games %}
+        <tr>
+            <td>{{game.name}}</td>
+            <td><a href="{% url 'game' game.id %}">View</a></td>
+            <td><a href="{% url 'game-update' game.id %}">Edit</a></td>
+            <td><a href="{% url 'game-delete' game.id %}">Delete</a></td>
+        </tr>
+        {% empty %}
+            <h3>No games in list</h3>
+        {% endfor %}
+    </table>
+{% endblock %}
