--- a/core/static/core/css/game_list.css
+++ b/core/static/core/css/game_list.css
@@ -157,7 +157,7 @@
   position: relative;
   height: 1.5em;
   width: 70%;
-  margin: 0.5em 0;
+  margin-top: 0.5em;
 
   font-size: 1em;
   line-height: 1.5em;
@@ -203,7 +203,7 @@
   position: relative;
   width: 100%;
   height: 118em;
-  margin: 0.5em 0;
+  margin-bottom: 0.5em;
   overflow: hidden;
 }
 
@@ -213,13 +213,13 @@
   padding: 0 1em;
   margin: 0;
 
-  font-size: 0.7em;
+  font-size: 0.8em;
   overflow: hidden;
 }
 
 .game__categories {
   display: block;
-  margin: 0.3em 0;
+  margin: 0.5em 0;
 }
 
 @keyframes scrolling {
