--- a/core/static/core/css/header.css
+++ b/core/static/core/css/header.css
@@ -151,4 +151,28 @@
   background-color: white;
   box-shadow: inset 0 0 0.5em 0 white, 0 0 0.5em 0 white;
 }
+
+.user__nav {
+  position: absolute;
+  top: calc(100% + 8px);
+  width: 12em;
+  padding: 0.5em 0;
+
+  font-size: 1.2em;
+  list-style: none;
+  background: var(--pink-color-l4);
+  border: 0.1em solid var(--user-icon-color);
+}
+
+.user__nav__item {
+  padding: 0.5em;
+}
+
+.user__nav__item:hover {
+  background-color: var(--user-icon-color);
+}
+
+.user__icon:hover .user__nav {
+  display: block;
+}
 /* User icon */
