--- a/core/templates/core/game_form.html
+++ b/core/templates/core/game_form.html
@@ -1,8 +1,8 @@
 <h1>Game publishing</h1>
 
-<form method="POST" action="">
+<form action="" method="post" enctype="multipart/form-data">
     {% csrf_token %}
-    {{form.media}}
-    {{form.as_p}}
+    {{ form.media }}
+    {{ form.as_p }}
     <input type="submit" value="Submit">
-</form>
+  </form>
