--- a/core/templates/user/register.html
+++ b/core/templates/user/register.html
@@ -1,9 +1,29 @@
-<h1>Register</h1>
+<!-- prettier-ignore  -->
+{% extends "user/base.html" %} 
+{% block title %}Register{% endblock %}
 
-<form method="POST">
-    {% csrf_token %}
-    {{form.as_p}}
-    <input type="submit" value="Register">
-</form>
+{% load static %}
+{% block styles %}
+<link rel="stylesheet" href="{% static 'user/css/register.css' %}" />
+{% endblock %}
 
-<p>Already have an account? <a href="{% url 'login' %}">Login</a></p>
+<!-- prettier-ignore  -->
+{% block content %}
+<div class="user-field__register">
+  <span class="user-field__register__bg"></span>
+  <header class="user-field__register__header glitch-1 font-effect-anaglyph">
+    Register
+  </header>
+  <form method="POST" class="user-field__form-wrapper">
+    {% csrf_token %} {{form.as_p}}
+    <input
+      type="submit"
+      value="Register"
+      class="user-field__register__submit"
+    />
+  </form>
+  <span class="user-field__register__login">
+    <p>Already have an account? <a href="{% url 'login' %}">Login</a></p>
+  </span>
+</div>
+{% endblock %}
