--- a/core/static/core/css/game_list.css
+++ b/core/static/core/css/game_list.css
@@ -1,28 +1,27 @@
 .games__wrapper {
   position: absolute;
-  top: 0;
   width: 100%;
   height: 100%;
-  background: url("../img/bg.jpg");
-  background-size: cover;
-  background-position: center;
+  top: 0;
 
+  background: url("../img/bg.webp");
+  background-size: 100% 100%;
+  background-position: center;
   overflow-y: scroll;
 }
-
 .games__wrapper::-webkit-scrollbar {
   display: none;
 }
 
 .brand {
   position: absolute;
-  top: var(--header-height);
   width: 100%;
   height: var(--brand-height);
-  color: white;
-  font-size: 4em;
-  border-bottom: var(--pink-color-1) 0.05em solid;
+  top: var(--header-height);
 
+  color: white;
+  font-size: 7em;
+  border-bottom: var(--pink-color-1) 0.05em solid;
   box-shadow: inset 0 0 0.5em 0 var(--pink-color-1),
     0 0 0.5em 0 var(--pink-color-1);
   background-color: var(--purple-color-l3);
@@ -32,10 +31,12 @@
 .games {
   display: flex;
   flex-wrap: wrap;
-  position: relative;
-  top: calc(var(--header-height) + var(--brand-height));
+  justify-content: space-between;
+  padding: 3em;
   width: 100%;
   min-height: 100%;
+  position: relative;
+  top: calc(var(--header-height) + var(--brand-height));
   background-color: var(--pink-color-l4);
 }
 /* List of games */
@@ -43,31 +44,31 @@
 /* Game card */
 .game {
   position: relative;
-  height: 24em;
-  width: 16em;
   margin: 1em;
+  width: 16em;
+  height: 24em;
   cursor: pointer;
 }
 
 /* Hover effect */
 .game--hover {
   display: block;
+  width: 100%;
+  height: 100%;
   position: absolute;
   top: 0;
   left: 0;
   z-index: 0;
-  width: 100%;
-  height: 100%;
 }
 
 .game--hover::before {
   content: "";
+  width: 100%;
+  height: 100%;
   position: absolute;
   top: 0;
   left: 0;
   z-index: -1;
-  width: 100%;
-  height: 100%;
 
   border-radius: 4px;
   transition: all 0.4s ease-in;
@@ -75,12 +76,12 @@
 
 .game--hover::after {
   content: "";
+  width: 100%;
+  height: 100%;
   position: absolute;
   top: 0;
   right: 0;
   z-index: -1;
-  width: 100%;
-  height: 100%;
 
   border-radius: 4px;
   transition: all 0.4s ease-in;
@@ -118,16 +119,15 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 100%;
+  height: 100%;
   position: relative;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
 
-  background: var(--pink-color-l4);
   color: white;
   text-shadow: 0 0 0.125em hsl(0 0% 100% / 0.3), 0 0 0.45em white;
-
+  background: var(--pink-color-l4);
   border-radius: 4px;
   overflow: hidden;
 }
@@ -144,28 +144,26 @@
 }
 
 .game__thumb {
+  padding-bottom: 0.5em;
   position: relative;
   height: 10em;
   background-size: cover;
   border-radius: 4px 4px 0 0;
-  padding-bottom: 0.5em;
 }
 
 .game__name {
-  --game-name-color: var(--pink-color-2);
   display: block;
   position: relative;
-  height: 1.5em;
-  width: 70%;
-  margin-top: 0.5em;
 
-  font-size: 1em;
-  line-height: 1.5em;
   text-align: center;
   font-weight: bold;
   white-space: nowrap;
 
   background-color: var(--game-name-color);
+
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .game:hover .game__name {
@@ -173,26 +171,35 @@
     0 0 0.5em 0 var(--game-name-color);
 }
 
-.game__name::before {
+.game__name__decor {
+  --game-name-color: var(--pink-color-2);
+  display: block;
+  margin-top: 0.5em;
+  width: 70%;
+  position: relative;
+  font-size: 1.2em;
+}
+
+.game__name__decor::before {
   content: "";
+  width: 0;
+  height: 0;
   position: absolute;
   top: 0;
   left: 0;
-  width: 0;
-  height: 0;
 
   border: 0.75em solid var(--game-name-color);
   border-color: transparent var(--game-name-color) transparent transparent;
   transform: translateX(-100%);
 }
 
-.game__name::after {
+.game__name__decor::after {
   content: "";
+  width: 0;
+  height: 0;
   position: absolute;
   top: 0;
   right: 0;
-  width: 0;
-  height: 0;
 
   border: 0.75em solid var(--game-name-color);
   border-color: transparent transparent transparent var(--game-name-color);
@@ -200,26 +207,28 @@
 }
 
 .game__description--scroll {
+  margin-top: 1em;
   position: relative;
   width: 100%;
-  height: 118em;
-  margin-bottom: 0.5em;
+  height: 8em;
   overflow: hidden;
 }
 
 .game__description {
-  display: block;
-  width: 100%;
   padding: 0 1em;
   margin: 0;
+  width: 100%;
+  display: block;
 
-  font-size: 0.8em;
+  font-size: 1em;
   overflow: hidden;
 }
 
 .game__categories {
   display: block;
   margin: 0.5em 0;
+  position: absolute;
+  bottom: 0;
 }
 
 @keyframes scrolling {
