--- a/core/static/core/css/main.css
+++ b/core/static/core/css/main.css
@@ -1,8 +1,12 @@
+@import url("https://fonts.googleapis.com/css2?family=VT323&display=swap");
+
 * {
+  /* Color */
   --purple-color-1: #17001c;
   --purple-color-l1: rgba(23, 00, 28, 0.7);
   --purple-color-m1: rgba(23, 00, 28, 0.8);
   --purple-color-2: #881deb;
+  --purple-color-l2: rgba(135, 29, 235, 0.2);
   --purple-color-3: #5b12af;
   --purple-color-l3: rgba(91, 18, 175, 0.4);
   --purple-color-m3: rgba(91, 18, 175, 0.9);
@@ -19,6 +23,7 @@
 
   --red-color-1: #ff1818;
   --red-color-2: #ff0f40;
+  --red-color-l2: rgba(255, 15, 63, 0.16);
   --red-color-3: #ce060e;
   --red-color-4: #ff0000;
   --red-color-5: #f9020d;
@@ -31,24 +36,14 @@
   --brown-color-l1: rgba(60, 24, 26, 0.5);
   --brown-color-m1: rgba(60, 24, 26, 0.8);
 
-  /* Main menu */
+  /* For size and position */
   --header-height: 80px;
   --brand-height: 120px;
   --header-z-index: 10;
   --sidebar-z-index: 10;
 
-  --glitch-duration: 5s;
-
   /* For effect */
-  --shadow-color: var(--red-color-1); /* For neon-1*/
-  --shadow-color-light: transparent;
-}
-
-a,
-a:hover,
-a:visited {
-  color: inherit;
-  text-decoration: none; /* no underline */
+  --glitch-duration: 5s;
 }
 
 html,
@@ -60,15 +55,26 @@ body {
 }
 
 body {
-  position: relative;
-  z-index: -100;
-
-  font-family: "Chakra Petch", "Times New Roman";
+  font-family: "VT323", monospace;
+  letter-spacing: 0.1em;
   box-sizing: border-box;
 }
 
 .main {
   display: block;
-  position: relative;
   height: 100%;
+  position: relative;
+}
+
+/* Reset css */
+a,
+a:hover,
+a:visited {
+  color: inherit;
+  text-decoration: none; /* no underline */
+}
+
+p {
+  padding: 0;
+  margin: 0;
 }
