--- a/core/static/core/css/utils.css
+++ b/core/static/core/css/utils.css
@@ -1,4 +1,181 @@
-/* ------------------------------------------------------------------------------------ */
+/* CRT Lines effect */
+.CRT {
+  display: block;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-image: linear-gradient(
+    rgba(17, 20, 53, 0.1),
+    rgba(118, 255, 241, 0.1)
+  );
+  background-repeat: repeat;
+  background-size: 100vw 10vh;
+  animation: background-scroll 2s linear infinite;
+}
+
+@keyframes background-scroll {
+  100% {
+    background-position: 0% 100%;
+  }
+}
+
+/* Faulty effect */
+.faulty-effect {
+  animation: border-flicker 2s linear infinite;
+}
+
+@keyframes border-flicker {
+  0% {
+    opacity: 0.1;
+  }
+  2% {
+    opacity: 1;
+  }
+  4% {
+    opacity: 0.1;
+  }
+  8% {
+    opacity: 1;
+  }
+  70% {
+    opacity: 0.7;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+.glowing-text {
+  animation: text-flicker 3s linear infinite;
+}
+
+@keyframes text-flicker {
+  0% {
+    opacity: 0.1;
+  }
+  2% {
+    opacity: 1;
+  }
+  8% {
+    opacity: 0.1;
+  }
+  9% {
+    opacity: 1;
+  }
+  12% {
+    opacity: 0.1;
+  }
+  20% {
+    opacity: 1;
+  }
+  25% {
+    opacity: 0.3;
+  }
+  30% {
+    opacity: 1;
+  }
+  70% {
+    opacity: 0.7;
+  }
+  72% {
+    opacity: 0.2;
+  }
+  77% {
+    opacity: 0.9;
+  }
+  100% {
+    opacity: 0.9;
+  }
+}
+
+.faulty-letter {
+  opacity: 0.7;
+  animation: faulty-flicker 2s linear infinite;
+}
+
+@keyframes faulty-flicker {
+  0% {
+    opacity: 0.1;
+  }
+  2% {
+    opacity: 0.1;
+  }
+  4% {
+    opacity: 0.5;
+  }
+  19% {
+    opacity: 0.5;
+  }
+  21% {
+    opacity: 0.1;
+  }
+  23% {
+    opacity: 1;
+  }
+  80% {
+    opacity: 0.5;
+  }
+  83% {
+    opacity: 0.4;
+  }
+  87% {
+    opacity: 1;
+  }
+}
+
+/* Scanlines effect */
+.scanlines-effect {
+  display: block;
+  position: absolute;
+  height: 100%;
+  width: 100%;
+
+  background: linear-gradient(
+    to bottom,
+    rgba(255, 255, 255, 0),
+    rgba(255, 255, 255, 0) 50%,
+    rgba(0, 0, 0, 0.2) 70%,
+    rgba(0, 0, 0, 0.6)
+  );
+  background-size: 100% 0.4rem;
+  border-radius: 2rem;
+  pointer-events: none;
+  animation: background-scroll 2s linear infinite;
+}
+
+/* Glowing screen effect */
+.glowing-screen-effect {
+  display: block;
+  position: absolute;
+  height: 100%;
+  width: 100%;
+
+  -webkit-animation: crt-glow 60s infinite;
+  animation: crt-glow 60s infinite;
+  background: radial-gradient(
+    circle at center,
+    #d41b1b 0%,
+    rgba(212, 27, 27, 0.88) 58%,
+    rgba(235, 21, 21, 0.57) 80%,
+    rgba(94, 19, 19, 0.27) 93%,
+    rgba(23, 10, 10, 0) 100%
+  );
+  opacity: 0.35;
+  pointer-events: none;
+}
+
+@keyframes crt-glow {
+  0% {
+    opacity: 0.15;
+  }
+  50% {
+    opacity: 0.25;
+  }
+}
+
+/* Glitch effect */
 .glitch-1 {
   letter-spacing: 0.2em;
   z-index: 1;
@@ -32,23 +209,18 @@
   0% {
     transform: translate(0);
   }
-
   20% {
     transform: translate(-3px, 3px);
   }
-
   40% {
     transform: translate(-3px, -3px);
   }
-
   60% {
     transform: translate(3px, 3px);
   }
-
   80% {
     transform: translate(3px, -3px);
   }
-
   to {
     transform: translate(0);
   }
@@ -66,36 +238,29 @@
   100% {
     transform: skewX(0deg);
   }
-
   41% {
     transform: skewX(10deg);
   }
-
   42% {
     transform: skewX(-10deg);
   }
-
   59% {
     transform: skewX(40deg) skewY(10deg);
   }
-
   60% {
     transform: skewX(-40deg) skewY(-10deg);
   }
-
   63% {
     transform: skewX(10deg) skewY(-5deg);
   }
-
   70% {
     transform: skewX(-50deg) skewY(-20deg);
   }
-
   71% {
     transform: skewX(10deg) skewY(-10deg);
   }
 }
-/* ------------------------------------------------------------------------------------ */
+
 .glitch-2 {
   display: block;
 }
@@ -126,22 +291,22 @@
 }
 
 .glitch-2 .glitch-2__shadow:nth-child(1) {
-  animation: glitch1-2 var(--glitch-duration) infinite steps(1, end);
+  animation: glitch-1-2 var(--glitch-duration) infinite steps(1, end);
 }
 .glitch-2 .glitch-2__shadow:nth-child(2) {
-  animation: glitch2-2 var(--glitch-duration) infinite steps(1, end);
+  animation: glitch-2-2 var(--glitch-duration) infinite steps(1, end);
 }
 .glitch-2 .glitch-2__shadow:nth-child(3) {
-  animation: glitch3-2 var(--glitch-duration) infinite steps(1, end);
+  animation: glitch-3-2 var(--glitch-duration) infinite steps(1, end);
 }
 .glitch-2 .glitch-2__shadow:nth-child(4) {
-  animation: glitch4-2 var(--glitch-duration) infinite steps(1, end);
+  animation: glitch-4-2 var(--glitch-duration) infinite steps(1, end);
 }
 .glitch-2 .glitch-2__shadow:nth-child(5) {
-  animation: glitch5-2 var(--glitch-duration) infinite steps(1, end);
+  animation: glitch-5-2 var(--glitch-duration) infinite steps(1, end);
 }
 
-@keyframes glitch1-2 {
+@keyframes glitch-1-2 {
   20% {
     clip-path: polygon(0 0%, 100% 0%, 100% 33%, 0 33%);
     transform: translate(-50%, -50%);
@@ -164,7 +329,7 @@
   }
 }
 
-@keyframes glitch2-2 {
+@keyframes glitch-2-2 {
   0% {
     opacity: 0;
   }
@@ -221,7 +386,7 @@
   }
 }
 
-@keyframes glitch3-2 {
+@keyframes glitch-3-2 {
   0% {
     opacity: 0;
   }
@@ -258,7 +423,7 @@
   }
 }
 
-@keyframes glitch4-2 {
+@keyframes glitch-4-2 {
   0% {
     opacity: 0;
   }
@@ -273,7 +438,7 @@
   }
 }
 
-@keyframes glitch5-2 {
+@keyframes glitch-5-2 {
   0% {
     opacity: 0;
   }
@@ -287,8 +452,62 @@
     transform: translate(-50%, -50%);
   }
 }
-/* ------------------------------------------------------------------------------------ */
 
+/* RGB glitch */
+.RGB-glitch {
+  animation: RGBshift 2s infinite alternate;
+}
+
+@keyframes RGBshift {
+  0% {
+    transform: rotate(0deg);
+    text-shadow: 5px 10px 0px rgb(245, 245, 241);
+    opacity: 1;
+  }
+  6% {
+    transform: rotate(0.5deg) scale(1.01);
+    text-shadow: 1px 1px 0px rgba(255, 0, 0, 0.5),
+      -5px -2px 0px rgba(0, 255, 0, 0.5), -2px 4px 0px rgba(0, 0, 255, 0.5);
+    opacity: 1;
+  }
+  10% {
+    transform: rotate(0deg);
+    text-shadow: 8px -2px 0px rgba(255, 0, 0, 0.5),
+      -5px -2px 0px rgba(0, 255, 0, 0.5), 2px -2px 0px rgba(0, 0, 255, 0.5);
+    opacity: 0.6;
+  }
+  12% {
+    text-shadow: none;
+    opacity: 1;
+  }
+  58% {
+    transform: rotate(0deg);
+    text-shadow: none;
+    opacity: 1;
+  }
+  59% {
+    text-shadow: -5px -8px 0px rgb(245, 245, 241);
+    opacity: 0.6;
+  }
+  62% {
+    transform: rotate(-0.5deg) scale(1.01);
+    text-shadow: 8px -2px 0px rgba(255, 0, 0, 0.5),
+      -5px -2px 0px rgba(0, 255, 0, 0.5), 2px -2px 0px rgba(0, 0, 255, 0.5);
+    opacity: 1;
+  }
+  64% {
+    transform: rotate(-0.75deg) scale(1.01);
+  }
+  67% {
+    text-shadow: none;
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(0deg);
+  }
+}
+
+/* Glitch text */
 .glitch--js {
   text-transform: uppercase;
 }
