--- a/core/templates/core/game_confirm_delete.html
+++ b/core/templates/core/game_confirm_delete.html
@@ -5,15 +5,31 @@
 {% load static %}
 {% block styles %}
 <link rel="stylesheet" href="{% static 'core/css/game_delete.css' %}" />
+<style>
+  .window__content__submit-btn {
+    margin: 0;
+  }
+</style>
+{% endblock %}
+
+<!-- prettier-ignore  -->
+{% block nav %}
+<a
+  href="{% url 'dashboard'%}"
+  class="window__nav__item window__nav__item--selected"
+  >My Games</a
+>
+<a href="{% url 'game-publish'%}" class="window__nav__item">Publish game</a>
 {% endblock %}
 
 <!-- prettier-ignore  -->
 {% block header %}Deleting{% endblock %}
+
 {% block content %}
 <a href="{% url 'games' %}"></a>
 <form method="POST" class="window__content__form">
   {% csrf_token %}
   <p>Are you sure you want to remove this game from our web? "{{game}}"</p>
-  <input type="submit" value="Delete" />
+  <input type="submit" value="Delete" class="window__content__submit-btn" />
 </form>
 {% endblock %}
