--- a/core/static/core/css/game_list.css
+++ b/core/static/core/css/game_list.css
@@ -31,9 +31,8 @@
 .games {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: center;
   padding: 3em;
-  width: 100%;
   min-height: 100%;
   position: relative;
   top: calc(var(--header-height) + var(--brand-height));
